--- a/bsitsched.html
+++ b/bsitsched.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>BSIT | Schedule</title>
+    <title>Information Technology | Schedule</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="image/UNIVERSITY-OF-CEBU.jpg">
 
