--- a/compEngsched.html
+++ b/compEngsched.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>BSCpE Schedule</title>
+    <title>Computer Engineering | Schedule</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="image/UNIVERSITY-OF-CEBU.jpg">
 
