--- a/AccSched.html
+++ b/AccSched.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ACCTG | Schedule</title>
+    <title>Accountancy  | Schedule</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="image/UNIVERSITY-OF-CEBU.jpg">
 
